--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="ui container">
     <h2>О сервисе</h2>
     <h3>Общая часть</h3>
     Сервис предназначен:
@@ -18,4 +18,21 @@
         <li>ГОСТ 8.280-78. ГСОЕИ. Потенциометры и уравновешенные мосты автоматические. Методы и средства поверки.</li>
         <li>школьный курс физики и математики</li>
     </ul>
+
+    <div class="ui hidden divider"></div>
+
+    <div class="ui list">
+        <div class="item">
+            <i class="mail icon"></i>
+            <div class="content">
+                <a href="mailto:bochkov.sa@gmail.com">bochkov.sa@gmail.com</a>
+            </div>
+        </div>
+        <div class="item">
+            <i class="github icon"></i>
+            <div class="content">
+                <a href="https://github.com/bochkov/vassist">source code</a>
+            </div>
+        </div>
+    </div>
 </div>
