--- a/public/pages/secondary.html
+++ b/public/pages/secondary.html
@@ -1,41 +1,37 @@
-<div class="container">
-    <form method="POST" class="form-horizontal col-sm-6" ng-submit="calculate('/secondary/')">
-        <h2>Исходные данные</h2>
-        <div class="form-group">
-            <label for="begin" class="col-sm-5 control-label">Начальная точка, &deg;C</label>
-            <div class="col-sm-7">
-                <input type="number" step="0.01" id="begin" required="true" ng-model="form.tbegin" class="form-control" />
+<div class="ui container">
+    <h2>Исходные данные</h2>
+    <form method="POST" class="ui equal width form" ng-submit="calculate('/secondary/')">
+        <div class="fields">
+            <div class="required field">
+                <label for="begin">Начальная точка, &deg;C</label>
+                <input type="number" step="0.01" id="begin" required="true" ng-model="form.tbegin" />
+            </div>
+            <div class="required field">
+                <label for="end">Конечная точка, &deg;C</label>
+                <input type="number" step="0.01" id="end" required="true" ng-model="form.tend" />
+            </div>
+            <div class="required field">
+                <label for="every">Через каждые, &deg;C</label>
+                <input type="number" step="0.1" id="every" required="true" ng-model="form.every" />
             </div>
         </div>
-        <div class="form-group">
-            <label for="end" class="col-sm-5 control-label">Конечная точка, &deg;C</label>
-            <div class="col-sm-7">
-                <input type="number" step="0.01" id="end" required="true" ng-model="form.tend" class="form-control" />
+        <div class="fields">
+            <div class="field">
+                <label for="temp">T окр. среды, &deg;C</label>
+                <input type="number" step="0.01" id="temp" ng-model="form.temp" />
             </div>
-        </div>
-        <div class="form-group">
-            <label for="every" class="col-sm-5 control-label">Через каждые, &deg;C</label>
-            <div class="col-sm-7">
-                <input type="number" step="0.1" id="every" required="true" ng-model="form.every" class="form-control" />
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="grad" class="col-sm-5 control-label">Градуировка</label>
-            <div class="col-sm-7">
-                <select ng-model="form.grad" id="grad" class="form-control" required="true">
+            <div class="required field">
+                <label for="grad">Градуировка</label>
+                <select ng-model="form.grad" id="grad" class="ui search dropdown" required="true">
                     <option disabled="true">Термопары</option>
                     <option ng-repeat="gr in grads[0]" value={{gr.name}}>{{gr.name}}</option>
                     <option disabled="true">Термометры сопротивления</option>
                     <option ng-repeat="gr in grads[1]" value={{gr.name}}>{{gr.name}}</option>
                 </select>
             </div>
-        </div>
-
-        <div class="form-group">
-            <label for="kt" class="col-sm-5 control-label">Класс точности</label>
-            <div class="col-sm-7">
-                <select ng-model="form.kt" id="kt" class="form-control" required="true" convert-to-number>
+            <div class="required field">
+                <label for="kt">Класс точности</label>
+                <select ng-model="form.kt" id="kt" class="ui search dropdown" required="true" convert-to-number>
                     <option value="0.25">0.25</option>
                     <option value="0.5">0.5</option>
                     <option value="1.0">1.0</option>
@@ -43,56 +39,46 @@
                 </select>
             </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-sm-offset-5 col-sm-7">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" ng-model="form.tempNeeded" id="tempNeeded" /> Учитывать окружающую температуру
-                    </label>
-                </div>
+        <div class="inline field">
+            <div class="ui checkbox">
+                <input type="checkbox" ng-model="form.tempNeeded" id="tempNeeded" />
+                <label>Учитывать окружающую температуру</label>
             </div>
         </div>
-
-        <div class="form-group">
-            <label for="temp" class="col-sm-5 control-label">T окр. среды, &deg;C</label>
-            <div class="col-sm-7">
-                <input type="number" step="0.01" id="temp" ng-model="form.temp" class="form-control" />
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-sm-offset-5 col-sm-7">
-                <button type="submit" class="btn btn-primary" no-blur>Расчет</button>
-            </div>
-        </div>
+        <button type="submit" class="ui small primary button">Расчет</button>
     </form>
+
+    <div class="ui hidden divider"></div>
 
     <ng-include src="'pages/error.html'"></ng-include>
 
-    <div class="clearfix"></div>
-
     <div ng-if="show" class="col-sm-8">
         <h2>Результаты</h2>
-        <table class="table table-bordered table-striped">
-            <tr>
-                <th rowspan="2">Температура, &deg;C</th>
-                <th rowspan="2">Номинальное значение, <span ng-bind="dt.ed"></span> </th>
-                <th colspan="2">Погрешность измерений, <span ng-bind="dt.ed"></span></th>
-                <th colspan="2">Погрешность сигнализации, <span ng-bind="dt.ed"></span></th>
-            </tr>
-            <tr>
-                <td>min</td>
-                <td>max</td>
-                <td>min</td>
-                <td>max</td>
-            </tr>
-            <tr ng-repeat="i in dt.result">
-                <td ng-bind="i.temp|number:2"></td>
-                <td ng-bind="i.value|number:3"></td>
-                <td>{{i.vis.tbegin|number:3}}</td><td>{{i.vis.tend|number:3}}</td>
-                <td>{{i.sig.tbegin|number:3}}</td><td>{{i.sig.tend|number:3}}</td>
-            </tr>
+        <table class="ui very compact table center aligned">
+            <thead>
+                <tr>
+                    <th rowspan="2">Температура, &deg;C</th>
+                    <th rowspan="2">Номинальное значение, {{dt.ed}}</th>
+                    <th colspan="2">Погрешность измерений, {{dt.ed}}</th>
+                    <th colspan="2">Погрешность сигнализации, {{dt.ed}}</th>
+                </tr>
+                <tr>
+                    <th>min</th>
+                    <th>max</th>
+                    <th>min</th>
+                    <th>max</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="i in dt.result">
+                    <td ng-bind="i.temp|number:2"></td>
+                    <td ng-bind="i.value|number:3"></td>
+                    <td>{{i.vis.tbegin|number:3}}</td>
+                    <td>{{i.vis.tend|number:3}}</td>
+                    <td>{{i.sig.tbegin|number:3}}</td>
+                    <td>{{i.sig.tend|number:3}}</td>
+                </tr>
+            </tbody>
         </table>
     </div>
 </div>
