--- a/public/pages/thermocouple.html
+++ b/public/pages/thermocouple.html
@@ -1,60 +1,45 @@
-<div class="container">
-    <form method="POST" ng-submit="calculate('/primary/thermocouple/')" class="form-horizontal col-sm-6">
-        <h2>Исходные данные</h2>
-        <div class="">
-            <h3>Эталонная термопара</h3>
-            <div class="form-group">
-                <label for="etValue" class="col-sm-4 control-label">Показания, мВ</label>
-                <div class="col-sm-8">
-                    <input type="number" step="0.001" required="true" ng-model="form.etValue" id="etValue" class="form-control" />
-                </div>
+<div class="ui container">
+    <h2>Исходные данные</h2>
+    <form method="POST" class="ui equal width form" ng-submit="calculate('/primary/thermocouple/')">
+        <h3>Эталонная термопара</h3>
+        <div class="fields">
+            <div class="required field">
+                <label for="etValue">Показания, мВ</label>
+                <input type="number" step="0.001" required="true" ng-model="form.etValue" id="etValue" />
             </div>
-            <div class="form-group">
-                <label for="etGrad" class="col-sm-4 control-label">Градуировка</label>
-                <div class="col-sm-8">
-                    <select ng-model="form.etGrad" id="etGrad" class="form-control" required="true">
-                        <option ng-repeat="gr in grads" value={{gr.name}}>{{gr.name}}</option>
-                    </select>
-                </div>
+            <div class="required field">
+                <label for="etGrad">Градуировка</label>
+                <select ng-model="form.etGrad" id="etGrad" class="ui search dropdown" required="true">
+                    <option ng-repeat="gr in grads" value={{gr.name}}>{{gr.name}}</option>
+                </select>
             </div>
-            <div class="form-group">
-                <label for="etPriv" class="col-sm-4 control-label">T холодных концов, &deg;C</label>
-                <div class="col-sm-8">
-                    <input type="number" step="0.001" ng-model="form.etPriv" id="etPriv" class="form-control" required="true" />
-                </div>
+            <div class="required field">
+                <label for="etPriv">T холодных концов, &deg;C</label>
+                <input type="number" step="0.001" ng-model="form.etPriv" id="etPriv" required="true" />
             </div>
         </div>
 
-        <div class="">
-            <h3>Поверяемая термопара</h3>
-            <div class="form-group">
-                <label for="ptValue" class="col-sm-4 control-label">Показания, мВ</label>
-                <div class="col-sm-8">
-                    <input type="number" step="0.001" required="true" ng-model="form.ptValue" id="ptValue" class="form-control" />
-                </div>
+        <h3>Поверяемая термопара</h3>
+        <div class="fields">
+            <div class="required field">
+                <label for="ptValue">Показания, мВ</label>
+                <input type="number" step="0.001" required="true" ng-model="form.ptValue" id="ptValue" />
             </div>
-            <div class="form-group">
-                <label for="ptGrad" class="col-sm-4 control-label">Градуировка</label>
-                <div class="col-sm-8">
-                    <select class="form-control" ng-model="form.ptGrad" id="ptGrad" required="true">
-                        <option ng-repeat="gr in grads" value={{gr.name}}>{{gr.name}}</option>
-                    </select>
-                </div>
+            <div class="required field">
+                <label for="ptGrad">Градуировка</label>
+                <select class="ui search dropdown" ng-model="form.ptGrad" id="ptGrad" required="true">
+                    <option ng-repeat="gr in grads" value={{gr.name}}>{{gr.name}}</option>
+                </select>
             </div>
-            <div class="form-group">
-                <label for="ptPriv" class="col-sm-4 control-label">T холодных концов, &deg;C</label>
-                <div class="col-sm-8">
-                    <input type="number" step="0.001" ng-model="form.ptPriv" id="ptPriv" class="form-control" required="true" />
-                </div>
+            <div class="required field">
+                <label for="ptPriv">T холодных концов, &deg;C</label>
+                <input type="number" step="0.001" ng-model="form.ptPriv" id="ptPriv" required="true" />
             </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-sm-offset-4 col-sm-8">
-                <button type="submit" class="btn btn-primary" no-blur>Расчет</button>
-            </div>
-        </div>
+        <button type="submit" class="ui small primary button">Расчет</button>
     </form>
+
+    <div class="ui hidden divider"></div>
 
     <ng-include src="'pages/error.html'"></ng-include>
 
