--- a/public/pages/thermometr.html
+++ b/public/pages/thermometr.html
@@ -15,11 +15,11 @@
                 <input type="number" step="0.001" id="every" required="true" ng-model="form.tevery" />
             </div>
             <div class="required field">
-                <label for="t0">Показания при 0 &deg;C, мВ</label>
+                <label for="t0">Показания при 0 &deg;C, Ом</label>
                 <input type="number" step="0.001" id="t0" required="true" ng-model="form.t0" />
             </div>
             <div class="required field">
-                <label for="t100">Показания при 100 &deg;C, мВ</label>
+                <label for="t100">Показания при 100 &deg;C, Ом</label>
                 <input type="number" step="0.001" id="t100" required="true" ng-model="form.t100" />
             </div>
         </div>
