fix parse float field kt

--- a/public/pages/secondary.html
+++ b/public/pages/secondary.html
@@ -31,7 +31,7 @@
             </div>
             <div class="required field">
                 <label for="kt">Класс точности</label>
-                <select ng-model="form.kt" id="kt" class="ui search dropdown" required="true" convert-to-number>
+                <select ng-model="form.kt" id="kt" class="ui search dropdown" required="true" convert-to-float>
                     <option value="0.25">0.25</option>
                     <option value="0.5">0.5</option>
                     <option value="1.0">1.0</option>
