fresh little bit

--- a/public/pages/secondary.html
+++ b/public/pages/secondary.html
@@ -52,7 +52,7 @@
 
     <ng-include src="'pages/error.html'"></ng-include>
 
-    <div ng-if="show" class="col-sm-8">
+    <div ng-if="show" class="col-sm-8 results">
         <h2>Вычисленная погрешность</h2>
         <dl>
             <dt>Погрешность измерений, мВ</dt>
