--- a/public/pages/thermocouple.html
+++ b/public/pages/thermocouple.html
@@ -43,7 +43,7 @@
 
     <ng-include src="'pages/error.html'"></ng-include>
 
-    <div ng-if="show" class="col-sm-offset-1 col-sm-5">
+    <div ng-if="show" class="col-sm-offset-1 col-sm-5 results">
         <h2>Результаты</h2>
         <dl>
             <dt>ТЭДС эталонной термопары (привиденная), мВ</dt>
