--- a/public/pages/thermometr.html
+++ b/public/pages/thermometr.html
@@ -30,7 +30,7 @@
 
     <ng-include src="'pages/error.html'"></ng-include>
 
-    <div ng-if="show">
+    <div ng-if="show" class="results">
         <h2>Результаты</h2>
         <table class="ui very compact table center aligned">
             <thead>
