--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="/static/img/favicon.png" />
     <link rel="stylesheet" href="static/css/semantic.min.css">
     <link rel="stylesheet" href="static/css/style.css">
-    <script src="static/js/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="static/js/semantic.min.js"></script>
     <script src="static/js/angular.min.js"></script>
     <script src="static/js/angular-route.min.js"></script>
