--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <script src="static/js/semantic.min.js"></script>
     <script src="static/js/angular.min.js"></script>
     <script src="static/js/angular-route.min.js"></script>
+    <script src="static/js/angular-locale_ru-ru.js"></script>
     <script src="static/js/script.js"></script>
 </head>
 
