--- a/public/pages/secondary.html
+++ b/public/pages/secondary.html
@@ -62,7 +62,7 @@
             <dd>&plusmn;{{dt.deltaSig|number:3}}</dd>
         </dl>
         <h2>Результаты</h2>
-        <table class="ui very compact table center aligned">
+        <table class="ui very compact celled table center aligned">
             <thead>
                 <tr>
                     <th rowspan="2">Температура, &deg;C</th>
